# failoverv2

./: .checkov.yml  .gitignore  .markdownlint.json  .mcp.json  .tflint.hcl  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  conftest.py  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_app_onboarding.md  profile_change_request.md
.github/workflows/: behavior-change-docs.yml  ci.yml  codeql.yml  diagrams-render-check.yml  mermaid-validate.yml  profile-doc-check.yml
.semgrep/: boto3-rules.yml
canaries/: routable_endpoint_probe.py
cli/: __init__.py  failoverctl.py  test_failoverctl.py
docs/: api-reference.md  architecture.md  console-build-guide.md  customer-walkthrough.md  decision-engine.md  failure-modes.md  glossary.md  onboarding-new-app.md  operations.md  profile-delivery-modes.md  profile-reference.md  solution-overview.md
docs/adr/: 0001-no-route53-arc.md  0002-ssm-not-dynamodb-runtime-state.md  0003-dns-first-failover-default.md  0004-step-functions-for-orchestration.md  0005-self-signed-tls-poc.md  0006-github-oidc-not-static-keys.md  TEMPLATE.md
docs/diagrams/: 01-solution-overview.md  02-topology.py  03-signal-collection-flow.md  04-decision-tree.md  05-failover-statemachine.md  06-failback-statemachine.md  07-cross-region-coordination.md  08-r53-control-pattern.md  09-indicator-polling.md  10-cicd-pipeline.md  11-iam-roles.md  12-vpc-and-endpoints.py  13-test-harness.py  15-detection-logic-walkthrough.md
docs/scenarios/: scenario-01-deployment-503-blip.md  scenario-02-alb-unhealthy-only.md  scenario-03-single-az-outage.md  scenario-04-full-region-outage.md  scenario-05-api-gw-5xx-storm.md  scenario-06-app-cant-reach-aurora.md  scenario-07-dry-run.md  scenario-08-manual-with-aurora-approval.md  scenario-09-aurora-confirmation-timeout.md  scenario-10-failback.md  scenario-11-mid-failover-lambda-crash.md  scenario-12-split-brain-attempt.md  scenario-13-profile-change-mid-incident.md  scenario-14-canary-self-failure.md
lambdas/: __init__.py
lambdas/approval_callback/: handler.py  test_handler.py
lambdas/decision_engine/: aws.py  handler.py  logic.py  test_handler.py  test_logic.py
lambdas/executor_aurora_confirm/: handler.py  logic.py  test_handler.py  test_logic.py
lambdas/executor_flip_r53_metric/: handler.py  test_handler.py
lambdas/executor_notify/: handler.py  test_handler.py
lambdas/executor_postcheck/: handler.py  test_handler.py
lambdas/executor_precheck/: handler.py  logic.py  test_handler.py  test_logic.py
lambdas/indicator_updater/: handler.py  test_handler.py
lambdas/manual_trigger/: aws.py  handler.py  logic.py  test_handler.py  test_logic.py
lambdas/signal_collector/: aws.py  handler.py  logic.py  test_aws_health.py  test_handler.py  test_logic.py
lib/: __init__.py  aws_clients.py  identifiers.py  indicator_writer.py  profile_loader.py  sns_publisher.py  state_store.py  structured_logger.py  test_aws_clients.py  test_identifiers.py  test_indicator_writer.py  test_profile_loader.py  test_sns_publisher.py  test_state_store.py  test_structured_logger.py  test_version.py
profiles/: profile.schema.json  test-app.yaml
runbooks/: RUNBOOK-aurora-promotion.md  RUNBOOK-dry-run.md  RUNBOOK-manual-failback.md  RUNBOOK-manual-failover.md  RUNBOOK-onboard-new-app.md  RUNBOOK-split-brain-recovery.md  RUNBOOK-stuck-state-machine.md
scripts/: _gen_docs.py  boto3_endpoint_check.sh  diagrams_render_check.sh  generate_profile_reference.py  iam_policy_check.py  logs_tail.sh  mermaid_validate.sh  no_sleep_check.sh  scenario_reset.sh  state_dump.sh  terraform_bootstrap.sh  terraform_validate_all.sh  validate_invalid_fixtures.py  validate_profiles.py  vpc_endpoint_check.py
statemachines/: failback.asl.json  failover.asl.json
terraform/apps/test-app/: shared.tfvars
terraform/modules/orchestrator-base/: acm.tf  aurora.tf  ecs.tf  locals.tf  outputs.tf  r53.tf  s3.tf  sns.tf  variables.tf  versions.tf  vpc-endpoints.tf  vpc.tf
tests/chaos/: framework.py  test_scenario_01_deployment_503_blip.py  test_scenario_02_alb_unhealthy_only.py  test_scenario_03_single_az_outage.py  test_scenario_04_full_region_outage.py  test_scenario_05_api_gw_5xx_storm.py  test_scenario_06_app_cant_reach_aurora.py  test_scenario_07_dry_run.py  test_scenario_08_manual_with_aurora_approval.py  test_scenario_09_aurora_confirmation_timeout.py  test_scenario_10_failback.py  test_scenario_11_mid_failover_lambda_crash.py  test_scenario_12_split_brain_attempt.py  test_scenario_13_profile_change_mid_incident.py  test_scenario_14_canary_self_failure.py
(+38 files in other folders)
